Bump gradle-intellij-plugin to 2.0