@@ -12,9 +12,6 @@ fun Project.configureUiTests() {
   val isCI: Boolean by rootProject.extra
   val intellijVersions: IntellijVersions by rootProject.extra
 
-  tasks["compileUiTestScala"].finalizedBy("classpathIndexCleanup")
-  tasks["processUiTestResources"].finalizedBy("classpathIndexCleanup")
-
   val sourceSets = extensions["sourceSets"] as? SourceSetContainer
   val uiTest = sourceSets!!["uiTest"]
   val uiTestsDir = "${System.getProperty("user.home")}/.ideprobe-uitests"
@@ -46,6 +43,8 @@ fun Project.configureUiTests() {
       if (project.properties["tests"] != null) {
         filter { includeTestsMatching("*.*${project.properties["tests"]}*") }
       }
+
+      jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
 
       if (project.hasProperty("virtualDisplay")) {
         environment("IDEPROBE_DISPLAY", "xvfb")
